Finished website. Have to add pictures

--- a/public/index.html
+++ b/public/index.html
@@ -5,35 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>Vincent's Portfolio</title>
-    <meta name="title" content="Vincent's Portfolio">
-    <meta name="description" content="Vincent Chen's portfolio showcasing class and personal projects at Duke University - primarily mechanical, electrical, and software work.">
+    <title>Raul's Portfolio</title>
+    <meta name="title" content="Raul's Portfolio">
+    <meta name="description" content="Raul Galvez's portfolio showcasing various class and personal projects at Duke University - primarily electrical, hardware, and software work.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="vjc9duke.github.io">
-    <meta property="og:title" content="Vincent's Portfolio">
-    <meta property="og:description" content="Vincent Chen's portfolio showcasing class and personal projects at Duke University - primarily mechanical, electrical, and software work.">
+    <meta property="og:url" content="rg288.github.io">
+    <meta property="og:title" content="Raul's Portfolio">
+    <meta property="og:description" content="Raul Galvez's portfolio showcasing various class and personal projects at Duke University - primarily electrical, hardware, and software work.">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="vjc9duke.github.io">
-    <meta property="twitter:title" content="Vincent's Portfolio">
-    <meta property="twitter:description" content="Vincent Chen's portfolio showcasing class and personal projects at Duke University - primarily mechanical, electrical, and software work.">
+    <meta property="twitter:url" content="rg288.github.io">
+    <meta property="twitter:title" content="Raul's Portfolio">
+    <meta property="twitter:description" content="Raul Galvez's portfolio showcasing various class and personal projects at Duke University - primarily electrical, hardware, and software work.">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6c63ff" />
 
-    <!-- Customize icons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v8=qAJ44G5Bm7">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v8=qAJ44G5Bm7">
-    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v8=qAJ44G5Bm7" color="#885bd5">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v8=qAJ44G5Bm7">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="RaulGalvez" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 	  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
